# play-wasm-bindgen

./: .gitignore  Cargo.toml  README.md  script.sh
src/: lib.rs  utils.rs
tests/: web.rs
www/: package-lock.json  package.json  webpack.config.js
www/public/: index.html
www/src/: index.js
