[package]
name = "play-wasm-bindgen"
version = "0.1.0"
authors = ["jaylenchan <jaylen.work@hotmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
wasm-bindgen-test = "0.3.33"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[profile.release]
opt-level = "s"
